--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jan 14 15:29:09 GMT 2023
-sdk.dir=/home/arthur/Android/Sdk
+#Wed Jan 18 10:49:49 GMT 2023
+sdk.dir=C\:\\Users\\acer\\AppData\\Local\\Android\\Sdk
